# kbprojection

./: .gitignore  LICENSE  README.md  analyze_proofs.py  debug_loader.py  debug_single_run.py  pyproject.toml
kbprojection/: __init__.py  data.py  downloads.py  filtering.py  langpro.py  llm.py  models.py  orchestration.py  prompts.py  runners.py  settings.py  utils.py
kbprojection/loaders/: base.py  sick.py  snli.py
notebooks/: nli_showcase_colab.ipynb
scripts/: 2x2_50_problems.py  analyze_proofs.py  audit_icl_examples.py  build_local_langpro_corpus.py  evaluate_prompt_examples.py  evaluate_sick_dataset.py  replay_legacy_results.py  replay_local_langpro_regressions.py  replay_old_successful_kbs.py
scripts/analysis/: 2x2_openrouter_detailed.csv  2x2_openrouter_summary.csv  compare_sick_results.py  sick_result_comparison.json  sick_result_comparison_report.md  sick_result_comparison_with_combined_full.json  sick_result_comparison_with_combined_sample.json
tests/: test_caching.py  test_langpro_local.py  test_langpro_parsing.py  test_llm.py  test_loaders.py  test_notebook_showcase.py  test_prompts.py  test_runners.py  test_settings.py
tests/fixtures/: prompt_examples_icl.json
