[tool.poetry]
name = "kbprojection"
version = "0.4.1"
description = "A python library for knowledge base prover injection."
authors = ["Gemini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^2.9.0"
openai = "^1.50.0" 
anthropic = "^0.34.0"
google-genai = "^0.3.0"
nltk = "^3.9"
sentence-transformers = "^3.1.0"
torch = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"