[project]
name = "kbprojection"
version = "0.5.0"
description = "A python library for knowledge base prover injection."
authors = [{ name = "Gemini" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0,<3",
    "httpx>=0.28.1,<0.29",
    "pydantic>=2.9.0,<3",
    "openai>=1.50.0,<2",
    "anthropic>=0.34.0,<0.35",
    "google-genai>=1.66.0,<2",
    "nltk>=3.9,<4",
    "sentence-transformers>=3.1.0,<4",
    "torch>=2.0.0",
    "tqdm>=4.66.0,<5",
]

[project.optional-dependencies]
notebook = [
    "ipywidgets>=8,<9",
    "pandas>=2,<3",
]

[tool.poetry]
name = "kbprojection"
version = "0.5.0"
description = "A python library for knowledge base prover injection."
authors = ["Gemini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
httpx = "^0.28.1"
pydantic = "^2.9.0"
openai = "^1.50.0" 
anthropic = "^0.34.0"
google-genai = "^1.66.0"
nltk = "^3.9"
sentence-transformers = "^3.1.0"
torch = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
